responsive iframe + suppression padding years section

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,24 @@
   width: 100px;
 }
 
+.video-container {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+}
+
+/* Then style the iframe to fit in the container div with full height and width */
+.responsive-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+}
+
 /* Base */
 html {
   overflow-x: hidden;
@@ -2098,7 +2116,7 @@ h5,
     -webkit-transform: translate(0%, 0%);
     -ms-transform: translate(0%, 0%);
     transform: translate(0%, 0%);
-    margin: -30px auto 0 auto;
+    margin: 50px auto 0 auto;
   }
 }
 .img-years .year > span {
